# Gitsweeper

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: mcp.md  reconcile.md
docs/examples/: nextcloud-csr-rapport-2026-05-06.md  nextcloud-csr-report-2026-05-06.md
openspec/: project.md
openspec/changes/archive/2026-05-06-reusable-process-report/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-07-effort-allocation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-07-portfolio-timeseries-foundation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-07-regression-monitoring/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-07-static-site-publish/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-22-gitsweeper-billbird-mcp/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-22-gitsweeper-billbird-reconcile/: README.md  proposal.md
openspec/changes/archive/2026-06-13-dora-metrics/: proposal.md
openspec/changes/archive/2026-06-13-forge-abstraction/: tasks.md
openspec/changes/archive/2026-06-13-forge-provider-forgejo/: tasks.md
openspec/changes/archive/2026-06-13-forge-provider-gitlab/: tasks.md
openspec/changes/archive/2026-06-13-gitsweeper-billbird-extract/: README.md  proposal.md
openspec/changes/archive/2026-06-14-retro-signals/: design.md  proposal.md
openspec/changes/archive/2026-06-14-scheduled-delivery/: tasks.md
openspec/changes/dora-metrics/: design.md  tasks.md
openspec/changes/forge-abstraction/: design.md  proposal.md  tasks.md
openspec/changes/forge-provider-forgejo/: design.md  proposal.md  tasks.md
openspec/changes/forge-provider-gitlab/: design.md  proposal.md  tasks.md
openspec/changes/gitsweeper-billbird-extract/: tasks.md
openspec/changes/gitsweeper-billbird-mcp/: tasks.md
openspec/changes/gitsweeper-billbird-reconcile/: tasks.md
openspec/changes/retro-signals/: tasks.md
openspec/changes/scheduled-delivery/: design.md  proposal.md  tasks.md
openspec/specs/commit-time-reconcile/: spec.md
openspec/specs/dora-metrics/: spec.md
openspec/specs/effort-allocation/: spec.md
openspec/specs/forge-access/: spec.md
openspec/specs/kpi-timeseries/: spec.md
openspec/specs/manager-mcp/: spec.md
openspec/specs/pr-classification/: spec.md
openspec/specs/pr-process-report/: spec.md
openspec/specs/pr-throughput-analysis/: spec.md
openspec/specs/regression-monitoring/: spec.md
openspec/specs/report-rendering/: spec.md
openspec/specs/retro-signals/: spec.md
openspec/specs/scheduled-delivery/: spec.md
openspec/specs/static-site-publish/: spec.md
scripts/: mcp_smoke.py
src/gitsweeper/: cli.py
src/gitsweeper/capabilities/: _pr_fields.py  commit_time_reconcile.py  dashboard.py  dora_metrics.py  effort_allocation.py  kpi_timeseries.py  pr_classification.py  pr_throughput.py  process_report.py  regression_monitoring.py  retro_signals.py  scheduled_delivery.py
src/gitsweeper/capabilities/manager_mcp/: __init__.py  periods.py  registry.py  server.py  tools.py
src/gitsweeper/lib/: billbird_client.py  commit_time.py  github_client.py  rendering.py  storage.py
src/gitsweeper/lib/forge/: __init__.py  base.py  forgejo.py  github.py  gitlab.py  selection.py
tests/: test_billbird_client.py  test_cli.py  test_commit_time.py  test_commit_time_reconcile.py  test_dashboard.py  test_dora_metrics.py  test_effort_allocation.py  test_forge_base.py  test_forge_contract.py  test_forge_forgejo.py  test_forge_github.py  test_forge_gitlab.py  test_forge_selection.py  test_github_client.py  test_kpi_timeseries.py  test_manager_mcp.py  test_mcp_against_fake_billbird.py  test_pr_classification.py  test_pr_throughput.py  test_process_report.py  test_regression_monitoring.py  test_rendering.py  test_retro_signals.py  test_scheduled_delivery.py  test_storage.py
(+22 files in other folders)
